[gd_scene load_steps=24 format=2]

[ext_resource path="res://resources/Models/Materials/computer/monitor-3-screen.obj" type="ArrayMesh" id=1]
[ext_resource path="res://resources/Models/Materials/computer/monitor-3-screen.png" type="Texture" id=2]
[ext_resource path="res://resources/Models/Materials/computer/parts-2-keyboard.obj" type="ArrayMesh" id=3]
[ext_resource path="res://resources/Models/Materials/computer/parts-2-keyboard.png" type="Texture" id=4]
[ext_resource path="res://resources/Models/Materials/computer/parts-1-mouse.obj" type="ArrayMesh" id=5]
[ext_resource path="res://resources/Models/Materials/computer/parts-1-mouse.png" type="Texture" id=6]
[ext_resource path="res://global/objects/scripts/pc.gd" type="Script" id=7]
[ext_resource path="res://global/objects/scripts/pc_ui.gd" type="Script" id=8]
[ext_resource path="res://inventory_system/scenes/inventory/inventory_slot_node.tscn" type="PackedScene" id=9]
[ext_resource path="res://resources/Themes/ui_theme1.tres" type="Theme" id=10]
[ext_resource path="res://resources/offline_mode_Asset/level_1/desktop_bg.png" type="Texture" id=11]
[ext_resource path="res://resources/Models/Materials/computer/parts-0-Tower.obj" type="ArrayMesh" id=12]

[sub_resource type="GDScript" id=12]
script/source = "extends StaticBody

export var device_name : String
var fa01 : StaticBody
var fa02 : StaticBody

onready var label = $ui/pc_screen/holder/Label


onready var name_line_edit = $ui/pc_screen/holder/name_lineEdit

func _ready():
	if device_name.empty():
		device_name = self.name
	name_line_edit.text = device_name


func _on_name_lineEdit_text_changed(new_text):
	device_name = new_text
	
func _set_connector( connection ):
	if fa01 == null:
		fa01 = connection
		label.text = \"Connected to %s\" % fa01.device_name
	elif fa02 == null:
		fa02 = connection
"

[sub_resource type="DynamicFont" id=7]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 1, 0.0784314, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 6000, 3375 )
margin_right = 271.626
margin_top = 3.9945

[sub_resource type="BoxShape" id=1]

[sub_resource type="SpatialMaterial" id=5]
albedo_texture = ExtResource( 2 )

[sub_resource type="SpatialMaterial" id=11]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 4 )

[sub_resource type="SpatialMaterial" id=4]
albedo_texture = ExtResource( 6 )

[sub_resource type="BoxShape" id=6]

[node name="object_monitor" type="StaticBody"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
script = SubResource( 12 )

[node name="ui@ColorRect@holder@inv@inventory@MarginContainer@slot_container@inventory_slot" parent="." instance=ExtResource( 9 )]
visible = false
margin_left = 531.0
margin_top = 252.0
margin_right = 551.0
margin_bottom = 272.0

[node name="ui" type="CanvasLayer" parent="."]
visible = false
script = ExtResource( 8 )

[node name="mode" type="CanvasLayer" parent="ui"]

[node name="io" type="ColorRect" parent="ui"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="holder" type="Control" parent="ui/io"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 10 )

[node name="to_pc" type="Button" parent="ui/io/holder"]
margin_left = 1711.0
margin_top = 442.0
margin_right = 1837.0
margin_bottom = 574.0
text = ">"

[node name="pc_screen" type="ColorRect" parent="ui"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="holder" type="Control" parent="ui/pc_screen"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 10 )

[node name="Exit" type="Button" parent="ui/pc_screen/holder"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -526.0
margin_top = 971.0
margin_right = -260.952
margin_bottom = -47.182
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 8 )
text = "Turn On"

[node name="TextureRect" type="Panel" parent="ui/pc_screen/holder"]
margin_left = 274.0
margin_top = 38.0
margin_right = 1652.0
margin_bottom = 932.0
rect_pivot_offset = Vector2( 766, 624 )
custom_styles/panel = SubResource( 10 )

[node name="name_lineEdit" type="LineEdit" parent="ui/pc_screen/holder"]
margin_left = 376.0
margin_top = 101.0
margin_right = 2630.0
margin_bottom = 253.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label" type="Label" parent="ui/pc_screen/holder"]
margin_left = 376.0
margin_top = 325.0
margin_right = 416.0
margin_bottom = 393.0

[node name="to_io" type="Button" parent="ui/pc_screen/holder"]
margin_left = 71.0
margin_top = 442.0
margin_right = 197.0
margin_bottom = 574.0
text = "<"

[node name="CollisionShape2D" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )

[node name="CSGMesh" type="CSGMesh" parent="CollisionShape2D"]
transform = Transform( 0.625, 0, 0, 0, 0.625, 0, 0, 0, 0.625, 6.2499e-08, -1, 0.0350946 )
mesh = ExtResource( 1 )
material = SubResource( 5 )

[node name="CSGBox" type="CSGBox" parent="CollisionShape2D/CSGMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.14663, 0.9513, -1.19209e-07 )
width = 0.533182
height = 0.12047
depth = 0.028609
material = SubResource( 11 )

[node name="CSGMesh2" type="CSGMesh" parent="CollisionShape2D"]
transform = Transform( 0.625, 0, 0, 0, 0.625, 0, 0, 0, 0.625, 0.125, -1, -0.608576 )
mesh = ExtResource( 3 )
material = SubResource( 3 )

[node name="CSGMesh3" type="CSGMesh" parent="CollisionShape2D"]
transform = Transform( 0.625, 0, 0, 0, 0.625, 0, 0, 0, 0.625, -0.75, -1, -0.733576 )
mesh = ExtResource( 5 )
material = SubResource( 4 )

[node name="CSGMesh4" type="CSGMesh" parent="CollisionShape2D"]
transform = Transform( -2.73196e-08, 0, 0.625, 0, 0.625, 0, -0.625, 0, -2.73196e-08, -0.433958, -1, 0.317955 )
mesh = ExtResource( 12 )
material = SubResource( 4 )

[node name="interaction_area" type="Area" parent="."]
transform = Transform( 1.04329, 0, 0, 0, 1.04329, 0, 0, 0, 1.04329, 0, 0, 0 )
collision_layer = 8
collision_mask = 8
script = ExtResource( 7 )
pc_name = "PC"
ui = NodePath("../ui")

[node name="CollisionShape2" type="CollisionShape" parent="interaction_area"]
transform = Transform( 1.04306, 0, 0, 0, 1.04306, 0, 0, 0, 1.04306, 0, 1, 0 )
shape = SubResource( 6 )

[node name="Camera" type="Camera" parent="interaction_area"]
transform = Transform( -0.958506, 0, -1.44731e-07, 0, 0.958506, 0, 1.44731e-07, 0, -0.958506, 0.0550003, 2.095, -2.94594 )
h_offset = 0.055
v_offset = -1.0
projection = 1
size = 1.376

[node name="Camera2" type="Camera" parent="interaction_area"]
transform = Transform( -2.70424e-07, 0, 0.958506, 0, 0.958506, 0, -0.958506, 0, -2.70424e-07, 2.883, 1.641, 1.209 )
h_offset = 0.055
v_offset = -1.0
projection = 1
size = 1.679

[connection signal="pressed" from="ui/io/holder/to_pc" to="ui" method="_on_to_pc_pressed"]
[connection signal="pressed" from="ui/pc_screen/holder/Exit" to="ui" method="_on_Exit_pressed"]
[connection signal="text_changed" from="ui/pc_screen/holder/name_lineEdit" to="." method="_on_name_lineEdit_text_changed"]
[connection signal="pressed" from="ui/pc_screen/holder/to_io" to="ui" method="_on_to_io_pressed"]
